--- a/src/NeoSample/package.json
+++ b/src/NeoSample/package.json
@@ -1,7 +1,7 @@
 {
   "name": "NeoSample-WebAPI",
   "version": "0.1.0",
-  "readme": "readme.MD",
+   "readme": "../../readme.MD",
   "description": "Starter Code for ASPNET 5 Web API with Angular 1.4",
   "authors": [
     "Glenn de Wysockie"
