--- a/src/NeoSample/bower.json
+++ b/src/NeoSample/bower.json
@@ -2,9 +2,14 @@
   "name": "NeoSample-WebAPI",
   "private": true,
   "dependencies": {
-    "angular": "~1.3.15",
     "jquery": "~2.1.3",
-    "bootstrap": "~3.3.4"
+    "bootstrap": "~3.3.4",
+    "angular": "~1.3.15",
+    "angular-sanitize": "~1.3.15",
+    "font-awesome": "~4.3.0",
+    "angular-ui-router": "~0.2.13",
+    "toastr": "~2.1.1",
+    "angular-animate": "~1.3.15"
   },
   "exportsOverride": {}
 }
