--- a/src/NeoSample/project.json
+++ b/src/NeoSample/project.json
@@ -1,6 +1,6 @@
 {
     /* Click to learn more about project.json  http://go.microsoft.com/fwlink/?LinkID=517074 */
-    "webroot": "wwwroot",
+    "webroot": "*",
     "version": "0.1.0-*",
     "dependencies": {
 	"Microsoft.AspNet.Server.IIS": "1.0.0-*",
