--- a/src/NeoSample/project.json
+++ b/src/NeoSample/project.json
@@ -1,5 +1,5 @@
 {
-    "webroot": "*",
+    "webroot": ".",
     "version": "0.1.0-*",
     "dependencies": {
 	"Microsoft.AspNet.Server.IIS": "1.0.0-*",
