--- a/src/NeoSample/bower.json
+++ b/src/NeoSample/bower.json
@@ -7,9 +7,9 @@
     "angular": "~1.3.15",
     "angular-sanitize": "~1.3.15",
     "font-awesome": "~4.3.0",
-    "angular-ui-router": "~0.2.13",
     "toastr": "~2.1.1",
-    "angular-animate": "~1.3.15"
+    "angular-animate": "~1.3.15",
+    "angular-new-router": "~0.5.3"
   },
   "exportsOverride": {}
 }
