--- a/src/NeoSample/bower.json
+++ b/src/NeoSample/bower.json
@@ -4,9 +4,12 @@
   "dependencies": {
     "jquery": "~2.1.3",
     "bootstrap": "~3.3.4",
-    "angularjs": "1.4.0-rc.0",
+    "angular": "~1.3.15",
+    "angular-sanitize": "~1.3.15",		
     "font-awesome": "~4.3.0",
-    "toastr": "~2.1.1"
+    "toastr": "~2.1.1",
+    "angular-animate": "~1.3.15",		
+    "angular-ui-router": "~0.2.13"
   },
   "exportsOverride": {}
 }
