--- a/src/NeoSample/bower.json
+++ b/src/NeoSample/bower.json
@@ -9,7 +9,7 @@
     "font-awesome": "~4.3.0",
     "toastr": "~2.1.1",
     "angular-animate": "~1.3.15",		
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "*"
   },
   "exportsOverride": {}
 }
