--- a/src/NeoSample/project.json
+++ b/src/NeoSample/project.json
@@ -2,13 +2,18 @@
     "webroot": ".",
     "version": "0.1.0-*",
     "dependencies": {
-	"Microsoft.AspNet.Server.IIS": "1.0.0-*",
-	"Microsoft.AspNet.Mvc": "6.0.0-*",
+	   "Microsoft.AspNet.Server.IIS": "1.0.0-*",
+	   "Microsoft.AspNet.Mvc": "6.0.0-*",
         "Microsoft.AspNet.StaticFiles": "1.0.0-*",
         "Microsoft.AspNet.Server.WebListener": "1.0.0-*",
         "EntityFramework.SqlServer": "7.0.0-*",
         "EntityFramework.Commands": "7.0.0-*",
-        "EntityFramework.InMemory": "7.0.0-*"
+        "EntityFramework.InMemory": "7.0.0-*",
+        "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-*",
+        "Microsoft.AspNet.Authorization": "1.0.0-*",
+        "Microsoft.AspNet.Authentication": "1.0.0-*", 
+        "Microsoft.Framework.Logging": "1.0.0-*",
+        "Microsoft.Framework.Logging.Console": "1.0.0-*"
     },
    "frameworks": {
         "dnx451": { },
